[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/shield.png" type="Texture" id=1]
[ext_resource path="res://Art/dice_empty.svg" type="Texture" id=2]
[ext_resource path="res://Scenes/CootsArt.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Claw.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/AnimPlayer.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=7]
[ext_resource path="res://Art/backgroundColorGrass.png" type="Texture" id=8]
[ext_resource path="res://Scenes/GameManager.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Attack1"
length = 2.0
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 143, 0, 0, 0, 0, 143, 0, 0, 0, 0, 120, -0.25, 0, 0.25, 0, 180, -0.1, 0, 0.25, 0, 143, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91, 1.51 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Coots2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.89, 1.01, 1.4 ),
"transitions": PoolRealArray( 0.5, 1, -0.5 ),
"update": 0,
"values": [ Vector2( 267, 22 ), Vector2( 280, 22 ), Vector2( 267, 22 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.89 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "smack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack1Blocked"
length = 2.0
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 143, 0, 0, 0, 0, 143, 0, 0, 0, 0, 120, -0.25, 0, 0.25, 0, 143, -0.1, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Shield:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.176471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.61 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Shield:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.61 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Shield:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.61 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Shield:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.61, 0.73, 0.91, 1.87 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Shield:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 137, -0.25, 0, 0.25, 0, 137, 0, 0, 0, 0, 160, -0.4, 0, 0.4, 0 ),
"times": PoolRealArray( 0, 0.91, 1.94 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Shield:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 78, -0.25, 0, 0.25, 0, 78, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.91 )
}
tracks/8/type = "method"
tracks/8/path = NodePath("AnimationPlayer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.91 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shield"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack2"
length = 2.0
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 267, -0.25, 0, 0.25, 0, 267, 0, 0, 0, 0, 290, -0.25, 0, 0.25, 0, 220, -0.1, 0, 0.25, 0, 267, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91, 1.51 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Coots1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.89, 1.01, 1.4 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 143, 22 ), Vector2( 130, 22 ), Vector2( 143, 22 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.89 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "smack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Attack2Blocked"
length = 2.0
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 267, -0.25, 0, 0.25, 0, 267, 0, 0, 0, 0, 280, -0.25, 0, 0.25, 0, 267, -0.1, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.51, 0.71, 0.91 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Shield2:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.1, 0, 0.1, 0, 1, -0.1, 0, 0.25, 0, 1, -0.1, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.61, 0.73, 0.91, 1.87 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Shield2:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 194, -0.25, 0, 0.25, 0, 194, 0, 0, 0, 0, 160, -0.4, 0, 0.4, 0 ),
"times": PoolRealArray( 0, 0.91, 1.94 )
}

[sub_resource type="Animation" id=6]
resource_name = "Love1"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 143, -0.25, 0, 0.25, 0, 180, -0.7, 0, 0.1, 0, 180, -0.7, 0, 0.25, 0, 143, -0.25, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.7, 1.1, 2 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("Coots1/CootsArt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "particle"
}, {
"args": [ false ],
"method": "particle"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Love2"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 267, -0.25, 0, 0.25, 0, 230, -0.7, 0, 0.1, 0, 230, -0.7, 0, 0.25, 0, 267, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath("Coots2/CootsArt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "particle"
}, {
"args": [ false ],
"method": "particle"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Coots1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 143, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Coots1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Coots2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 267, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Coots2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Shield:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.176471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Shield:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Shield:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Shield:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Shield:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 136, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Shield:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 78, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "value"
tracks/10/path = NodePath("Coots2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 267, 22 ) ]
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Coots1/Claw1:position:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( -40, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Coots1/Claw1:position:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 59, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "value"
tracks/13/path = NodePath("Coots1:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 143, 22 ) ]
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Shield2:modulate:r")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0.176471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Shield2:modulate:g")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("Shield2:modulate:b")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("Shield2:modulate:a")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("Shield2:position:x")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( 194, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/19/type = "bezier"
tracks/19/path = NodePath("Shield2:position:y")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"points": PoolRealArray( 78, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="GameManager" type="Node2D"]
script = ExtResource( 10 )

[node name="Coots1" type="Node2D" parent="."]
position = Vector2( 143, 22 )
script = ExtResource( 7 )

[node name="Claw1" parent="Coots1" instance=ExtResource( 4 )]
unique_name_in_owner = true
position = Vector2( -40, 59 )
scale = Vector2( -1, 1 )

[node name="CootsArt" parent="Coots1" instance=ExtResource( 3 )]
position = Vector2( -40, 59 )
side = true

[node name="HBoxContainer" type="HBoxContainer" parent="Coots1/CootsArt"]
margin_left = -100.0
margin_top = 19.0
margin_right = 900.0
margin_bottom = 129.0
grow_horizontal = 2
rect_scale = Vector2( 0.2, 0.2 )
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Coots1BG" type="NinePatchRect" parent="Coots1/CootsArt/HBoxContainer"]
unique_name_in_owner = true
margin_left = 345.0
margin_right = 655.0
margin_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 310, 0 )
texture = ExtResource( 2 )
patch_margin_left = 64
patch_margin_top = 42
patch_margin_right = 64
patch_margin_bottom = 42

[node name="P1Moves" type="HBoxContainer" parent="Coots1/CootsArt"]
unique_name_in_owner = true
margin_top = 22.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MinusPos1" type="Position2D" parent="Coots1"]
unique_name_in_owner = true
position = Vector2( -61, 23 )

[node name="Coots2" type="Node2D" parent="."]
position = Vector2( 267, 22 )
script = ExtResource( 7 )

[node name="Claw2" parent="Coots2" instance=ExtResource( 4 )]
unique_name_in_owner = true
position = Vector2( -40, 59 )

[node name="CootsArt" parent="Coots2" instance=ExtResource( 3 )]
position = Vector2( -40, 59 )

[node name="HBoxContainer" type="HBoxContainer" parent="Coots2/CootsArt"]
margin_left = -100.0
margin_top = 19.0
margin_right = 900.0
margin_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.2, 0.2 )
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Coots2BG" type="NinePatchRect" parent="Coots2/CootsArt/HBoxContainer"]
unique_name_in_owner = true
margin_left = 345.0
margin_right = 655.0
margin_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 310, 0 )
texture = ExtResource( 2 )
patch_margin_left = 64
patch_margin_top = 42
patch_margin_right = 64
patch_margin_bottom = 42

[node name="P2Moves" type="HBoxContainer" parent="Coots2/CootsArt"]
unique_name_in_owner = true
margin_left = -28.0
margin_top = 22.0
margin_right = 28.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MinusPos2" type="Position2D" parent="Coots2"]
unique_name_in_owner = true
position = Vector2( -61, 23 )

[node name="Shield" type="Sprite" parent="."]
modulate = Color( 0.176471, 0.537255, 1, 0 )
position = Vector2( 136, 78 )
scale = Vector2( 0.359375, 0.359375 )
texture = ExtResource( 1 )

[node name="Shield2" type="Sprite" parent="."]
modulate = Color( 0.176471, 0.537255, 1, 0 )
position = Vector2( 194, 78 )
scale = Vector2( 0.359375, 0.359375 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1 = SubResource( 1 )
anims/Attack1Blocked = SubResource( 3 )
anims/Attack2 = SubResource( 4 )
anims/Attack2Blocked = SubResource( 5 )
anims/Love1 = SubResource( 6 )
anims/Love2 = SubResource( 7 )
anims/RESET = SubResource( 2 )
script = ExtResource( 5 )

[node name="BackgroundColorGrass" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 160, 88 )
scale = Vector2( 0.2, 0.2 )
z_index = -11
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 880 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
